--- a/FindCube/pom.xml
+++ b/FindCube/pom.xml
@@ -5,8 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.leti</groupId>
-    <artifactId>NodesEqEdges</artifactId>
+    <artifactId>FindCube</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>FindCube</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
