--- a/Bormatov/CountDeficit228/pom.xml
+++ b/Bormatov/CountDeficit228/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.leti</groupId>
-    <artifactId>NodesEqEdges</artifactId>
+    <artifactId>CountDeficit228</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
